--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^6.6.0",
     "express": "^4.17.2",
     "html-webpack-plugin": "^5.5.0",
+    "source-map-loader": "^3.0.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
